[gd_scene load_steps=22 format=2]

[ext_resource path="res://Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://hitbox-hurtbox/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://hitbox-hurtbox/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://WhiteColor.tres" type="Shader" id=10]

[sub_resource type="ShaderMaterial" id=10]
resource_local_to_scene = true
shader = ExtResource( 10 )
shader_param/active = true

[sub_resource type="Animation" id=1]
resource_name = "Fly"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ), Vector2( 4, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShadowSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 0.96, 0.96 ), Vector2( 1, 1 ), Vector2( 1.04, 1.04 ), Vector2( 1.08, 1.08 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShadowSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 6.0
height = 6.0

[sub_resource type="CircleShape2D" id=5]
radius = 71.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 5.0
height = 4.0

[sub_resource type="CircleShape2D" id=7]
radius = 6.0

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=9]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 10 )
texture = ExtResource( 1 )
offset = Vector2( 0, -12 )
hframes = 5

[node name="ShadowSprite" type="Sprite" parent="."]
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Fly"
anims/Fly = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 4 )

[node name="Stats" parent="." instance=ExtResource( 5 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 5 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4
type = "NONE"

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -16 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 7 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Stop"
anims/RESET = SubResource( 11 )
anims/Start = SubResource( 8 )
anims/Stop = SubResource( 9 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="status_started" from="Hurtbox" to="." method="_on_Hurtbox_status_started"]
[connection signal="status_stopped" from="Hurtbox" to="." method="_on_Hurtbox_status_stopped"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
